--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,7 @@ bind -r e kill-pane -a
 set -g base-index 1
 setw -g pane-base-index 1
 setw -g automatic-rename on
+set -g renumber-windows on
 set -g set-titles on
 set -g set-titles-string "#T"
 set -g display-time 1200
